Fixes for horizontal layout on smaller screens, phyla now appear as common names

--- a/src/css/imerss-scrolly.css
+++ b/src/css/imerss-scrolly.css
@@ -124,6 +124,7 @@ h2 {
 
 .mxcw-content {
     overflow-y: auto;
+    width: 100%;
 }
 
 .mxcw-content .section {
