--- a/src/css/imerss-viz-scrolly.css
+++ b/src/css/imerss-viz-scrolly.css
@@ -27,8 +27,6 @@
 
 .mxcw-viz-pane .imerss-container {
     width: 50%;
-    /* Can't make the taxon info smaller than 480px plus a bit of margin*/
-    min-width: 502px;
 }
 
 .imerss-panel-label {
