--- a/src/css/xetthecum.css
+++ b/src/css/xetthecum.css
@@ -126,6 +126,8 @@ body #quarto-content {
 
 .imerss-container-checklist {
     background-color: var(--bio-background);
+    /* Can't make the taxon info smaller than 480px plus a bit of margin*/
+    /* min-width: 502px; */
 }
 
 .imerss-panel-taxonDisplay {
@@ -135,12 +137,37 @@ body #quarto-content {
 .imerss-taxonDisplay {
     border: none;
     overflow: visible;
-    align-self: center;
-    width: 480px;
+    padding: 5px;
+    /* align-self: center; */
+    /* width: 480px;*/
 }
 
 .imerss-taxonDisplay > div {
     width: auto;
+}
+
+.imerss-cultural-values {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 480px;
+}
+
+@media screen and ( max-height: 1024px ) {
+
+    .imerss-cultural-value-img {
+        width: 54px;
+        height: 54px;
+        background-repeat: no-repeat;
+        background-size: 54px;
+    }
+
+    .imerss-cultural-values {
+        max-width: 300px;
+    }
+
+    .imerss-taxonDisplay {
+        font-size: smaller;
+    }
 }
 
 .imerss-checklist-label {
